syntax = "proto3";
package m2g.pb;

enum VariableType {
  NO_VARIABLE = 0;
}
